# ppv-notion-utils

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  quick_start.ipynb  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  tox.ini
.github/workflows/: sphinx.yml  static.yml
_build/: codeofconduct.html  guide.html  index.html  objects.inv  reference.html  search.html  searchindex.js
_build/.doctrees/: codeofconduct.doctree  environment.pickle  guide.doctree
_build/_sources/: codeofconduct.md.txt  index.md.txt
_build/_static/: local.css
_build/_static/tippy/: codeofconduct.0a05d4e0-862d-42d3-9437-48de651ba400.js  codeofconduct.671dc640-65b2-47f1-a419-67f83d6c54e7.js  codeofconduct.e39028c4-38b8-4ac8-b296-6b06a23520e3.js  guide.49614cc6-84ff-496e-87e0-dc9844942462.js  guide.617915ed-e2d3-47df-b042-a6b7c3150eec.js  guide.ea783cad-2422-4df4-b105-5d435c00399a.js  index.28e530de-28f0-44f9-919e-ad0f13fec14e.js  index.700af609-3f84-4af4-8fe5-716d02c62527.js  (+3 more)
_build/doctrees/: environment.pickle  guide.doctree  index.doctree
_build/html/: .buildinfo  codeofconduct.html  genindex.html  guide.html  index.html  objects.inv  output.json  quickstart.html  reference.html  search.html  searchindex.js
docs/: Makefile  codeofconduct.md  conf.py  guide.md  index.md  requirements.txt
docs/_static/: local.css
src/ ppv_notion_utils/: copy_weekly_review.py
src/ppv_notion_utils/: copy_weekly_review.py  make_new_week_entry.py  recurring_tasks.py
tests/: test_load_notion_key_from_env.py
(+63 files in other folders)
