[metadata]
name = ppv_notion_utils
url = https://github.com/GlobalMin/ppv-notion-utils
author = Jameson Stillwell
author_email = email@email.com
version = 0.0.1

[options]
package_dir=
    =src
zip_safe=no
packages=find:

[options.packages.find]
where=src



[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24
